test/compile_errors/err_no_alloc_comprehension.w
//! expect-check-fail: comprehension allocates here

@[no_alloc]
fn main:
    let _xs = [x for x in 0..3]

